<resources>
    <string name="app_name">LiveColor</string>
    <string name="title_color_picker">Color Picker</string>
    <string name="title_saved_colors">Saved Colors</string>
    <string name="title_my_palettes">My Palettes</string>
    <string name="title_activity_saved_colors">SavedColorsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="opencamera">Open Camera</string>
    <string name="photogallery">View Photo Gallery</string>
    <string name="colorValues">Your Color</string>
    <string name="colorHEX"> HEX: </string>
    <string name="colorRGB">RGB: </string>
    <string name="colorHSV"> HSV: </string>
    <string name="photo">Photo</string>
    <string name="takepicture">Take Picture</string>
    <string name="color_info"> Color Information </string>
    <string name="button_press_me"> Press Me </string>
    <string name="live_color_team">LiveColor Team</string>
    <string name="team_member_headshot">Team Member\'s Headshot</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="paige_riola">Paige Riola</string>
    <string name="gabriella_lindsey">Gabriella Lindsey</string>
    <string name="dustin_seltz">Dustin Seltz</string>
    <string name="daniel_luft_martinez">Daniel Luft-Martinez</string>
    <string name="shealtiel_mulder">Shealtiel Mulder</string>
    <string name="placeholder_text">In slime rancher you can actually use the jetpack to skip the
                                    gate leading into the Moss Blanket. This way you can save a slime key
                                    for later.</string>
    <string name="daniel_blurb">I love AI and automation, so naturally I chose to help with UI on a
                                color picking app. I very much enjoy developing with friends, even
                                if it\'s outside of my comfort zone. My favorite color in the app is
                                called \"Jedi Night,\" a deep dark green.</string>
    <string name="paige_blurb">Hi! I\'m an aspiring software developer and hobby artist whose interests
        happened to collide into this idea that I was somehow bold enough to pitch in my software design
        class and this happened! I live and breathe Scrum. My favorite color is \"Platonic Blue.\"</string>
    <string name="melanie_blurb">I\'m interested in learning and applying modern technologies such as mobile
        development and cloud computing to create meaningful experiences for users. My favorite color
        from the app is called \"Blue Nebula.\"</string>
    <string name="dustin_blurb">I\'m a software developer and have enjoyed learning how to create an
        Android app with the LiveColor team. My favorite color is \"Poppy Pompadour,\" a rich purple.</string>
    <string name="shealtiel_blurb">I enjoy creating beautiful UI experiences and using programming
        to solve unique problems. I am very grateful for the opportunity to work on this project
        alongside my colleagues and friends. My favorite color in the app is called \"Aggressive Baby Blue.\" What a silly name!</string>
    <string name="gabby_blurb">I am a software engineer with a focus in data visualization and web development.
        Working on LiveColor taught me a lot about being a member of a development team and was overall
        a really great experience. My favorite color in the app is \"Ireland Green.\"</string>
    <string name="andrew_blurb">I am a software engineer with interest in backend development.
        LiveColor was the first project that I had ever worked on and the memories and experiences
        are things that I will always cherish. I\'m thankful for everyone on this team for making this
        application a great one. My favorite color on this app is \"Wasabi.\"</string>
    <string name="inactive_members">Inactive Members</string>
    <string name="melanie_wong">Melanie Wong</string>
    <string name="andrew_tran">Andrew Tran</string>
    <string name="get_to_know_us"><u>Get to Know Us</u></string>
    <string name="meet_the_livecolor_team"><u>Meet the LiveColor Team</u></string>
    <string name="about_livecolor"><u>About LiveColor</u></string>
    <string name="github"><u>GitHub</u></string>
    <string name="accent_choice_prompt">Light Mode Accent</string>
    <string name="accent_choice">#86357C</string>
    <string name="zoom_choice_prompt">Maximum Zoom Level</string>
    <string name="copyright_message">Version 2.0.2\nCopyright © LiveColor\nAll Rights Reserved</string>

</resources>
