<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity">

    <TextView
        android:id="@+id/helloWorldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/live_color_team"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloWorldText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:adjustViewBounds="false"
                        android:contentDescription="@string/team_member_headshot"
                        app:srcCompat="@drawable/test"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/paige_riola"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView24"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="10sp"
                            android:lineSpacingExtra="4sp"
                            android:text="@string/placeholder_text"
                            android:textAlignment="viewStart"
                            tools:layout_marginLeft="10sp"
                            tools:layout_marginRight="10sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:contentDescription="@string/team_member_headshot"
                        app:srcCompat="@drawable/test"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gabriella_lindsey"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="10sp"
                            android:lineSpacingExtra="4sp"
                            android:text="@string/placeholder_text"
                            android:textAlignment="viewStart"
                            tools:layout_marginLeft="10sp"
                            tools:layout_marginRight="10sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:adjustViewBounds="false"
                        android:contentDescription="@string/team_member_headshot"
                        android:cropToPadding="false"
                        android:visibility="visible"
                        app:srcCompat="@drawable/dustin" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dustin_seltz"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="10sp"
                            android:lineSpacingExtra="4sp"
                            android:text="@string/placeholder_text"
                            android:textAlignment="viewStart"
                            android:visibility="visible"
                            tools:layout_marginLeft="10sp"
                            tools:layout_marginRight="10sp"
                            tools:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView16"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:adjustViewBounds="false"
                        android:contentDescription="@string/team_member_headshot"
                        android:cropToPadding="false"
                        android:visibility="visible"
                        app:srcCompat="@drawable/daniel" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/daniel_luft_martinez"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="10sp"
                            android:lineSpacingExtra="4sp"
                            android:text="@string/placeholder_text"
                            android:textAlignment="viewStart"
                            android:visibility="visible"
                            tools:layout_marginLeft="10sp"
                            tools:layout_marginRight="10sp"
                            tools:visibility="visible" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView17"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:contentDescription="@string/team_member_headshot"
                        android:visibility="visible"
                        app:srcCompat="@drawable/shealtiel" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shealtiel_mulder"
                            android:textAlignment="viewStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="10sp"
                            android:lineSpacingExtra="4sp"
                            android:text="@string/placeholder_text"
                            android:textAlignment="viewStart"
                            tools:layout_marginLeft="10sp"
                            tools:layout_marginRight="10sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>